<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:id="@+id/etName"
        android:textSize="18sp">

    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_address"
        android:id="@+id/etAddress"
        android:textSize="18sp">

    </EditText>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgGender"
        android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/he"
        android:id="@+id/rbHe"
        android:textSize="18sp"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/she"
        android:id="@+id/rbShe"
        android:textSize="18sp"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:id="@+id/rbOther"
        android:textSize="18sp"/>

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_gender"
        android:id="@+id/et1">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/btnUpdate"
        android:textSize="22sp"
        android:layout_gravity="center">

    </Button>


</LinearLayout>
    </layout>